--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,14 @@ edition = "2018"
 license = "WTFPL"
 publish = false
 
+[features]
+no-entrypoint = []
+
 [dependencies]
+arrayref = "0.3.6"
 solana-program = "1.6.2"
 thiserror = "1.0.21"
+spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
 
 [dev-dependencies]
 solana-sdk = "1.6.2"
